# PerfectAudioWorks

./: .gitignore  CMakeLists.txt  README.md  TODO  main.cpp  makefile  portaudiohandler
AudioPharser/: PortAudioHandler.cpp  PortAudioHandler.h  Portaudiohandler.cpp  Portaudiohandler.h  libsndfiledecoder.h  wavpharser.cpp  wavpharser.h
GUI/: PAW_MainWidget.ui
PAW_GUI/: PAW_GUI.pro  main_paw_widget.cpp  main_paw_widget.h  main_paw_widget.ui  main_paw_widget.ui.autosave  paw_update_timeline.cpp  paw_update_timeline.h
src/: main.cpp
src/AudioPharser/: CodecHandler.c  CodecHandler.h  PortAudioHandler.cpp  PortAudioHandler.h  ffmpegdecoder.c  ffmpegdecoder.h  libsndfiledecoder.c  libsndfiledecoder.cpp  libsndfiledecoder.h  mpg123decoder.c  mpg123decoder.h  portaudio_backend.c  portaudio_backend.h
src/PAW_GUI/: about_paw_gui.cpp  about_paw_gui.h  about_paw_gui.ui  main_paw_widget.cpp  main_paw_widget.h  main_paw_widget.ui  settings_paw_gui.cpp  settings_paw_gui.h  settings_paw_gui.ui
src/miscellaneous/: file.c  file.h
